--- a/rattler/scss/layout/_content.scss
+++ b/rattler/scss/layout/_content.scss
@@ -78,6 +78,7 @@ body{
 }
 .fixed{
 	overflow: hidden;
+	position: fixed;
 	left: 100%;
 	height: 100vh;
 	transition: 0.3s;
@@ -827,7 +828,7 @@ body{
 		transition: 0.3s ease-in-out;
 		&__toggle{
 			left: 0 !important;
-			width: 100vw;
+			width: 100%;
 		}
 	}
 	.hamb{
