--- a/rattler/scss/layout/_content.scss
+++ b/rattler/scss/layout/_content.scss
@@ -74,13 +74,13 @@ h3{
 }
 body{
 	position: relative;
-	left: 0%;
+	/*left: 0%;*/
 }
 .fixed{
-	overflow: hidden;
-	position: fixed;
-	left: 100%;
-	height: 100vh;
+	/*overflow: hidden;*/
+	/*position: fixed;
+	left: 100%;*/
+	height: 100%;
 	transition: 0.3s;
 	/*position: relative;*/
 }
