--- a/rattler/scss/layout/_content.scss
+++ b/rattler/scss/layout/_content.scss
@@ -1039,12 +1039,12 @@ body{
 				}
 			}
 		}
-		&:hover{
+		/*&:hover{
 			left: -250px !important;
 			.hamb{
 				left: 0;
 			}
-		}
+		}*/
 	}
 	.whowe, .directions, .details, .clients, .materials, .consultation,
 	.contacts, .security{
