--- a/chemodan__shop/scss/layout/_content.scss
+++ b/chemodan__shop/scss/layout/_content.scss
@@ -111,6 +111,9 @@ h3{
 		cursor: pointer;
 	}
 }
+body{
+	height: auto !important;
+}
 .content{	
 	order: 2;
     -webkit-order: 2;
@@ -180,6 +183,7 @@ h3{
 		width: 40px;
 		display: flex;
 		justify-content: center;
+		align-items: center;
 		&_1{
 			img{
 				width: 30px;
@@ -240,6 +244,7 @@ h3{
     	font: 400 13px "Roboto",sans-serif;
     	text-decoration: underline;
     	color: #3498db;
+    	display: none;
     }
     &__title{
     	color: #1c1c1c;
@@ -642,7 +647,7 @@ h3{
 	}
 	a{
 		font: 400 14px "Roboto",sans-serif;
-		color: #a4a4a4;
+		color: #000;
 		padding: 0 6px;
 		transition: 0s;
 		img{
@@ -658,7 +663,7 @@ h3{
 		display: inline-block;
 		background: url(../img/icon_home.svg) center center no-repeat;
 		background-size: 100%;
-		transition: 0.2s ease-in-out;
+		/*transition: 0.2s ease-in-out;*/
 		&:hover{
 			background: url(../img/icon_home-home.svg) center center no-repeat;
 		}
@@ -783,6 +788,12 @@ h3{
 			height: auto;
 			padding: 8px 15px;
 		}
+		&_akcii{
+			&:hover{
+				box-shadow: 0px 0px 1px 1px #9bd5fa;
+    			border-radius: 1px;
+			}
+		}
 	}
 	&__showmore{
 		height: 90px;
@@ -851,9 +862,9 @@ h3{
 		font: 400 14px "Roboto",sans-serif;
 		color: #1c1c1c;
 		cursor: pointer;
-		&:hover{
+		/*&:hover{
 			color: #3498db;
-		}
+		}*/
 	}
 	&__brand{
 		width: 68px;
@@ -1029,6 +1040,7 @@ h3{
 		justify-content: center;
 		align-items: center;
 		border-right: 1px solid #e8e8e8;
+		height: 40px;
 		&:last-child{
 			border-right: 0;
 		}
@@ -1127,6 +1139,9 @@ h3{
 			color: #1c1c1c;
 			text-transform: uppercase;
 			text-decoration: underline;
+			&:hover{
+				color: #3498db;
+			}
 		}
 	}
 	a.categories__h2{
@@ -1149,6 +1164,12 @@ h3{
 		margin-bottom: 25px;
 		overflow: hidden;
 	}
+	/*&__slider{
+		z-index: -1;
+		&_active{
+			z-index: 2;
+		}
+	}*/
 }
 .filtertab{
 	font: 400 14px "Roboto",sans-serif;
@@ -1203,9 +1224,9 @@ h3{
 		height: 230px;
 		width: 100%;
 		padding-top: 3px;
-		text-align: center;
+		/*text-align: center;*/
 		display: flex;
-		justify-content: center;
+		/*justify-content: center;*/
 		align-items: center;
 		img{
 			/*height: 100%;*/
@@ -1357,6 +1378,10 @@ h3{
 			color: #e74c3c;
 		}
 	}
+	&__btncont{
+		display: flex;
+		justify-content: space-between;
+	}
 	&__btn{
 		background: #3498db;
 		width: 100%;
@@ -1369,6 +1394,12 @@ h3{
 		border: 0;
 		&:hover{
 			background: #01385f;
+		}
+		&_2{
+			width: 44%;
+			&:first-child{
+				width: 55%;
+			}
 		}
 	}
 	&__tip{
@@ -1837,14 +1868,14 @@ h3{
 	}
 	&__link{
 		font: 400 12px "Roboto",sans-serif;
-		color: #1c1c1c;
+		color: #a4a4a4;;
 		margin: 0 2px;
 		&:hover{
 			color: #3498db;
 		}
 		i{
 			font-size: 12px;
-			color: #1c1c1c;
+			color: #a4a4a4;
 		}
 	}
 }
@@ -2217,7 +2248,7 @@ h3{
 		border-radius: 100%;
 		display: flex;
 		justify-content: center;
-		align-items: center;
+		/*align-items: center;*/
 		overflow: hidden;
 		border: 1px solid #d8d8d8;
 		margin-right: 10px;
@@ -2590,7 +2621,7 @@ h3{
 		padding: 0 5px;
 		box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.09);
 		&_amount{
-			padding: 0 10px;
+			padding: 0;
 		}
 	}
 	&__disc{
@@ -2627,6 +2658,7 @@ h3{
 		height: 23px;
 		&_active{
 			border-color: #3498db;
+			background: #fff;
 			span{
 				color: #3498db;
 			}
@@ -2665,6 +2697,12 @@ h3{
 			}
 		}
 	}
+	&__minus{
+		padding-left: 10px;
+	}
+	&__plus{
+		padding-right: 10px;
+	}
 	&__prices{
 		display: flex;
 		justify-content: flex-start;
@@ -2688,6 +2726,46 @@ h3{
 		height: 36px;
 	}
 }
+.sp-thumbs{
+	.slick-prev, .slick-next{
+		width: 0;
+    	height: 0;
+    	color: transparent;
+    	border: 0;
+    	position: absolute;
+    	top: 25px;
+    	&:hover{
+    		&:before{
+    			color: #3498db;
+    			text-shadow: 0px 0px 3.2800000000000002px rgba(0, 0, 0, 0.18);
+    		}
+    	}
+	}
+	.slick-prev{
+		left: 15px;
+		&:before{
+    		content: "\f104";
+    		font-family: FontAwesome;
+    		font-style: normal;
+    		font-weight: normal;
+    		text-decoration: inherit;
+    		color: #a4a4a4;
+    		font-size: 25px;
+		}
+	}
+	.slick-next{
+		right: -25px;
+		&:before{
+    		content: "\f105";
+    		font-family: FontAwesome;
+    		font-style: normal;
+    		font-weight: normal;
+    		text-decoration: inherit;
+    		color: #a4a4a4;
+    		font-size: 25px;
+		}
+	}
+}
 .characteristic{
 	display: flex;
 	justify-content: space-between;
@@ -2696,7 +2774,7 @@ h3{
 		width: 370px;
 		li{
 			display: flex;
-			justify-content: space-between;
+			justify-content: flex-start;
 			position: relative;
             overflow: hidden;
             padding: 1px 0;
@@ -2716,6 +2794,9 @@ h3{
 				position: relative;
                 z-index: 2;
                 background: #fff;
+                &:last-child{
+                	margin-left: auto;
+                }
 			}
 		}
 	}
@@ -2988,6 +3069,7 @@ h3{
 		overflow: hidden;
 		text-align: center;
 		margin-bottom: 18px;
+		position: relative;
 		img{
 			margin-top: -30px;
     		margin-left: -15px;
@@ -3031,6 +3113,43 @@ h3{
 		}
 	}
 }
+.file{
+	&_upload{
+		overflow: hidden;
+    	position: absolute;
+    	top: 0;
+    	left: 0;
+    	width: 143px;
+    	height: 143px;
+    	display: flex;
+    	justify-content: center;
+    	align-items: center;
+    	box-shadow: 0 0 0 9999px rgba(0,0,0,0.7) inset;
+    	&:before{
+    		content: "";
+    		height: 105px;
+    		width: 105px;
+    		background: url(../img/change.png) center center no-repeat;
+    		background-size: 100%;
+    		position: absolute;
+    		z-index: 2;
+    	}
+    	span{
+    		font: 500 21px "Roboto",sans-serif;
+    		color: #fff;
+    		position: relative;
+    		z-index: 3;
+    	}
+    	[type="file"]{
+			position: absolute;
+			width: 143px;
+    		height: 143px;
+    		opacity: 0;
+    		cursor: pointer;
+    		z-index: 4;
+    	}
+	}
+}
 .address{
 	width: 620px;
 	display: none;
@@ -3050,10 +3169,12 @@ h3{
 		align-items: center;
 		flex-wrap: wrap;
 		&_active{
-			box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
 			.address__editbox{
 				display: block;
 			}
+		}
+		&_checked{
+			box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
 		}
 	}
 	&__name{
@@ -3248,6 +3369,11 @@ h3{
 		    right: -25px;
     		top: 2px;
     		text-decoration: none;
+		}
+		&_active{
+			&:after{
+				transform: rotate(180deg);
+			}
 		}
 	}
 	&__list{
