--- a/chemodan__shop/scss/layout/_content.scss
+++ b/chemodan__shop/scss/layout/_content.scss
@@ -254,6 +254,21 @@ body{
     	display: flex;
     	justify-content: space-between;
     	align-items: center;
+    	position: relative;
+    	&:after{
+    		content: "\f107";
+			font-family: FontAwesome;
+			font-style: normal;
+			font-weight: normal;
+			text-decoration: inherit;
+			font-size: 14px !important;
+			color: #a4a4a4;
+			padding: 0 5px;
+			position: absolute;
+			right: 5px;
+    		top: 0px;
+    		cursor: pointer;
+    	}
     }
     &__more{
     	i{
@@ -1917,6 +1932,18 @@ body{
 			width: 17px;
 			span{
 				padding: 0;
+			}
+		}
+		&_active{
+			border-color: #3498db;
+			span{
+				color: #3498db;
+			}
+			.filterbar__img{
+				border-color: #3498db;
+				i{
+					color: #3498db;
+				}
 			}
 		}
 		&:hover{
@@ -4215,7 +4242,7 @@ body{
 /*Balance end*/
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-    body{min-height: 100hv; width: 100%; display: flex; flex-direction: column;}
+    body{min-height: 100vh; width: 100%; display: flex; flex-direction: column;}
 }
 @media screen and (max-width: 1200px) {
 	
