--- a/drilling_solutions/css/style.css
+++ b/drilling_solutions/css/style.css
@@ -683,11 +683,8 @@ h3 {
   cursor: pointer;
   position: relative;
 }
-.slider-nav .slick-slide::after {
-  position: absolute;
-  left: 0;
-  top: 0;
-  box-shadow: 0 0 0 9999px rgba(250, 187, 0, 0.75) inset;
+.slider-nav .slick-slide img {
+  width: 100%;
 }
 .slider-nav .slick-slide:hover:after {
   content: "";
