--- a/drilling_solutions/scss/layout/_footer.scss
+++ b/drilling_solutions/scss/layout/_footer.scss
@@ -33,12 +33,24 @@ footer{
 					font: 14px "GPL";
 					color: #b7b7b7;
 					line-height: 30px;
+					&:after{
+						display: block;
+					    content: attr(title);
+					    font-family: "GPM";
+					    height: 0;
+					    overflow: hidden;
+					    visibility: hidden;
+					}
+					&:hover{
+						color: #fabb00;
+						font-family: "GPM";
+					}
 				}
 			}
 		}
 	}
 	&__text{
-		margin-top: 55px;
+		margin-top: 65px;
 		p{
 			font: 11px "GPL";
 			color: #dfdfdf;
@@ -89,13 +101,29 @@ footer{
 		&__left{
 			flex-wrap: wrap;
 			justify-content: space-around;
+			width: 100%;
+		}
+		&__right{
+			display: flex;
+    		justify-content: space-around;
+    		flex-wrap: wrap;
+    		align-items: center;
+    		width: 100%;
 		}
 		&__text{
-			margin-top: 20px;
+			margin-top: 6px;
 		}
 		&__item{
 			margin-right: 0;
 			margin-bottom: 15px;
+			&:first-child{
+				/*width: 100%;
+				display: flex;
+				justify-content: center;*/
+			}
 		}
+	}
+	.copyright{
+		margin-bottom: 0;
 	}
 }
