--- a/drilling_solutions/scss/layout/_header.scss
+++ b/drilling_solutions/scss/layout/_header.scss
@@ -100,6 +100,9 @@ header{
 		top: 0;
 		.header__top{
 			background: #fdfdfe;
+			.wrapper{
+				padding: 10px 0;
+			}
 		}
 		.header__info a, .btn{
 			color: #1a1a1a;
@@ -108,6 +111,7 @@ header{
 			background: #222323;
 		}
 		.header__nav{
+			padding: 10px 0;
 			ul{
 				li{
 					a{
@@ -129,6 +133,11 @@ header{
 				display: block;
 			}
 		}
+		.toggle{
+			span{
+				background-color: #000;
+			}
+		}
 	}
 }
 .email{
@@ -147,6 +156,10 @@ header{
 	text-transform: uppercase;
 	font: 12px "GPL" !important;
 	line-height: 24px !important;
+	transition: 0.2s ease-in-out;
+	&:hover{
+		background: #fabb00;
+	}
 }
 .toggle{
 	width: 30px;
@@ -155,7 +168,7 @@ header{
 		height: 3px;
 		width: 100%;
 		display: block;
-		background-color: #000;
+		background-color: #fff;
 		margin-bottom: 5px;
 		&:last-child{
 			margin-bottom: 0;
